crates/strider-analyze/tests/snapshots/v3__mips32be__builtins__popcount64.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x400880:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "4" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "4" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v5" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v5" [color="#888888", style=dashed];
  "v5" -> "4" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "v6" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v6" [color="#888888", style=dashed];
  "v6" -> "4" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v7" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v7" [color="#888888", style=dashed];
  "v7" -> "4" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v8" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v8" [color="#888888", style=dashed];
  "v8" -> "4" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "9" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v11" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v11" -> "9" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "9" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x419010:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "13" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v14" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v14" -> "10" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "15" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "16" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
